--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,44 @@
-aniso8601==9.0.1
-cachetools==4.2.1
-certifi==2020.12.5
-chardet==4.0.0
-google-api-core==1.26.1
-google-api-python-client==2.0.2
-google-auth==1.27.1
-google-auth-httplib2==0.1.0
-googleapis-common-protos==1.53.0
-gsheet==0.0.1
-gsheets==0.5.1
-httplib2==0.19.0
-idna==2.10
-numpy==1.17.3
+async-generator==1.10
+attrs==21.4.0
+beautifulsoup4==4.10.0
+bs4==0.0.1
+cachetools==5.0.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==36.0.2
+df2gspread==1.0.4
+google-api-python-client==1.6.7
+google-auth==2.6.2
+google-auth-oauthlib==0.5.1
+gspread==5.3.0
+h11==0.13.0
+httplib2==0.20.4
+idna==3.3
+numpy==1.21.5
 oauth2client==4.1.3
-opencv-python==4.1.1.26
-packaging==20.9
-protobuf==3.15.6
+oauthlib==3.2.0
+outcome==1.1.0
+pandas==1.3.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pyparsing==2.4.7
-pytz==2021.1
-requests==2.25.1
-rsa==4.7.2
-six==1.15.0
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+selenium==4.1.3
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+trio==0.20.0
+trio-websocket==0.9.2
+typing_extensions==4.1.1
 uritemplate==3.0.1
-urllib3==1.26.3
+urllib3==1.26.9
+wsproto==1.1.0
